fix: fixed date picker and button alignment on filter search

--- a/angular/projects/public-nrpti/src/app/records/records-list/search-filters/search-filters.component.scss
+++ b/angular/projects/public-nrpti/src/app/records/records-list/search-filters/search-filters.component.scss
@@ -13,11 +13,11 @@
 }
 
 .filter-footer {
-  @include flex-box();
-  @include flex-direction(row-reverse);
+  margin-top: 1rem;
 
   &__button {
     background-color: $primary;
+    min-height: 40px;
   }
 }
 
